--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,15 +1,17 @@
+---
+dependencies: []
+
 galaxy_info:
   role_name: unix-tools
   author: devilluminati
-  description: Install Unix Tools
-  license: license (GPL-2.0-or-later, MIT, etc)
-  min_ansible_version: 2.1
+  description: Install a set of Unix Tools
+  license: "MIT"
+  min_ansible_version: 2.4
   platforms:
     - name: Ubuntu
       versions:
         - all
   galaxy_tags:
-    - shell
-    - linux
+    - system
+    - tools
     - server
-dependencies: []
